parsers/tree-sitter-ampl/corpus/source_file.txt
==========
Empty File
==========

---

(source_file)

==============
Block comments
==============

/*
 * Block comments
 */

/* Comment with asterisks **/

----

(source_file
  (block_comment)
  (block_comment))

=============
Line comments
=============

# Comment

#---#

#

----

(source_file
  (line_comment)
  (line_comment)
  (line_comment))
